--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Blog | My Sensational Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -20,43 +20,54 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link active" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container mt-4">
-    <h1>About Me</h1>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="images/profile.jpg" alt="Profile Picture" class="img-fluid rounded-circle">
-        </div>
-        <div class="col-md-6">
-            <h3>Who Am I?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper. Morbi vitae tincidunt mauris, eu ultricies nulla. Phasellus non tempus elit. Vestibulum vestibulum, quam sit amet volutpat feugiat, enim nisi luctus dui, vel consectetur nisi mi id felis. Nunc venenatis orci nec urna cursus venenatis. Nullam sit amet nibh enim. Suspendisse potenti. Suspendisse potenti.</p>
-            <h3>My Interests</h3>
-            <ul>
-                <li>Programming</li>
-                <li>Web Development</li>
-                <li>Photography</li>
-                <li>Traveling</li>
-            </ul>
+<header class="hero bg-primary text-white text-center py-5">
+    <div class="container">
+        <h1>Blog</h1>
+        <p>Latest Posts and Updates</p>
+    </div>
+</header>
+
+<main class="content py-5">
+    <div class="container">
+        <div class="row">
+            <article class="col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Second Blog Post</h2>
+                        <p class="card-text">This is my second blog post. More content to come!</p>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-6 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Another Interesting Post</h2>
+                        <p class="card-text">This blog post is about something really interesting.</p>
+                    </div>
+                </div>
+            </article>
         </div>
     </div>
-</div>
+</main>
 
 <footer class="bg-dark text-white text-center py-4">
     <p>&copy; 2024 My Sensational Blog | Designed by euuuuuuan</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
