--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Contact | My Sensational Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -20,43 +20,51 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link active" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container mt-4">
-    <h1>About Me</h1>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="images/profile.jpg" alt="Profile Picture" class="img-fluid rounded-circle">
-        </div>
-        <div class="col-md-6">
-            <h3>Who Am I?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper. Morbi vitae tincidunt mauris, eu ultricies nulla. Phasellus non tempus elit. Vestibulum vestibulum, quam sit amet volutpat feugiat, enim nisi luctus dui, vel consectetur nisi mi id felis. Nunc venenatis orci nec urna cursus venenatis. Nullam sit amet nibh enim. Suspendisse potenti. Suspendisse potenti.</p>
-            <h3>My Interests</h3>
-            <ul>
-                <li>Programming</li>
-                <li>Web Development</li>
-                <li>Photography</li>
-                <li>Traveling</li>
-            </ul>
-        </div>
+<header class="hero bg-primary text-white text-center py-5">
+    <div class="container">
+        <h1>Contact Me</h1>
+        <p>I'd love to hear from you!</p>
     </div>
-</div>
+</header>
+
+<main class="content py-5">
+    <div class="container">
+        <form>
+            <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" id="message" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send</button>
+        </form>
+    </div>
+</main>
 
 <footer class="bg-dark text-white text-center py-4">
     <p>&copy; 2024 My Sensational Blog | Designed by euuuuuuan</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
