--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,18 @@
                 </div>
             </article>
         </div>
+
+        <!-- 댓글 섹션 -->
+        <div class="comment-section mt-5">
+            <h3>Comments</h3>
+            <div id="comments-list">
+                {% for comment in comments %}
+                <div class="comment">{{ comment }}</div>
+                {% endfor %}
+            </div>
+            <textarea id="comment-input" class="form-control mt-3" rows="3" placeholder="Write a comment..."></textarea>
+            <button id="submit-comment" class="btn btn-primary mt-3">Submit</button>
+        </div>
     </div>
 </main>
 
@@ -70,5 +82,27 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="scripts.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#submit-comment').click(function() {
+            const comment = $('#comment-input').val();
+            if (comment) {
+                $.ajax({
+                    url: '/add_comment',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({ comment: comment }),
+                    success: function(response) {
+                        if (response.status === 'success') {
+                            $('#comments-list').append('<div class="comment">' + response.comment + '</div>');
+                            $('#comment-input').val('');
+                        }
+                    }
+                });
+            }
+        });
+    });
+</script>
 </body>
 </html>
+
