--- a/blog.html
+++ b/blog.html
@@ -66,8 +66,12 @@
         <div class="comment-section mt-5">
             <h3>Comments</h3>
             <div id="comments-list">
-                {% for comment in comments %}
-                <div class="comment">{{ comment }}</div>
+                {% for index, comment in enumerate(comments) %}
+                <div class="comment" data-id="{{ index }}">
+                    <p>{{ comment.comment }} <small>({{ comment.timestamp }})</small></p>
+                    <button class="btn btn-danger btn-sm delete-comment">Delete</button>
+                    <button class="btn btn-secondary btn-sm edit-comment">Edit</button>
+                </div>
                 {% endfor %}
             </div>
             <textarea id="comment-input" class="form-control mt-3" rows="3" placeholder="Write a comment..."></textarea>
@@ -94,8 +98,50 @@
                     data: JSON.stringify({ comment: comment }),
                     success: function(response) {
                         if (response.status === 'success') {
-                            $('#comments-list').append('<div class="comment">' + response.comment + '</div>');
+                            $('#comments-list').append('<div class="comment" data-id="' + ($('#comments-list .comment').length) + '">' +
+                                '<p>' + response.comment + ' <small>(' + response.timestamp + ')</small></p>' +
+                                '<button class="btn btn-danger btn-sm delete-comment">Delete</button> ' +
+                                '<button class="btn btn-secondary btn-sm edit-comment">Edit</button>' +
+                                '</div>');
                             $('#comment-input').val('');
+                        }
+                    }
+                });
+            }
+        });
+
+        $(document).on('click', '.delete-comment', function() {
+            const commentElement = $(this).closest('.comment');
+            const commentId = commentElement.data('id');
+
+            $.ajax({
+                url: '/delete_comment',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({ comment_id: commentId }),
+                success: function(response) {
+                    if (response.status === 'success') {
+                        commentElement.remove();
+                    }
+                }
+            });
+        });
+
+        $(document).on('click', '.edit-comment', function() {
+            const commentElement = $(this).closest('.comment');
+            const commentId = commentElement.data('id');
+            const commentText = commentElement.find('p').text().trim();
+
+            const newComment = prompt("Edit your comment:", commentText);
+            if (newComment) {
+                $.ajax({
+                    url: '/update_comment',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({ comment_id: commentId, new_comment: newComment }),
+                    success: function(response) {
+                        if (response.status === 'success') {
+                            commentElement.find('p').html(response.new_comment + ' <small>(' + response.timestamp + ')</small>');
                         }
                     }
                 });
