--- a/about.html
+++ b/about.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Me | My Sensational Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        /* Additional Custom Styles */
+        .hero {
+            background: linear-gradient(135deg, #6b73ff, #000dff);
+            padding: 100px 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            color: #fff;
+        }
+
+        .hero p {
+            font-size: 1.5rem;
+            color: #fff;
+        }
+
+        .profile-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+
+        .interests-list {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .interests-list li {
+            font-size: 1.25rem;
+            margin-bottom: 10px;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -34,32 +71,42 @@
     </div>
 </nav>
 
-<div class="container mt-4">
-    <h1>About Me</h1>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="images/profile.jpg" alt="Profile Picture" class="img-fluid rounded-circle">
-        </div>
-        <div class="col-md-6">
-            <h3>Who Am I?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper. Morbi vitae tincidunt mauris, eu ultricies nulla. Phasellus non tempus elit. Vestibulum vestibulum, quam sit amet volutpat feugiat, enim nisi luctus dui, vel consectetur nisi mi id felis. Nunc venenatis orci nec urna cursus venenatis. Nullam sit amet nibh enim. Suspendisse potenti. Suspendisse potenti.</p>
-            <h3>My Interests</h3>
-            <ul>
-                <li>Programming</li>
-                <li>Web Development</li>
-                <li>Photography</li>
-                <li>Traveling</li>
-            </ul>
+<header class="hero">
+    <div class="container">
+        <img src="images/profile.jpg" alt="Profile Picture" class="profile-img animate__animated animate__fadeInDown">
+        <h1 class="display-3 animate__animated animate__fadeInDown">About Me</h1>
+        <p class="lead animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper.</p>
+    </div>
+</header>
+
+<section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 animate__animated animate__fadeInLeft">
+                <h2>Who Am I?</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper. Morbi vitae tincidunt mauris, eu ultricies nulla.</p>
+            </div>
+            <div class="col-md-6 animate__animated animate__fadeInRight">
+                <h2>My Interests</h2>
+                <ul class="interests-list">
+                    <li>Programming</li>
+                    <li>Web Development</li>
+                    <li>Photography</li>
+                    <li>Traveling</li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
 <footer class="bg-dark text-white text-center py-4">
     <p>&copy; 2024 My Sensational Blog | Designed by euuuuuuan</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.js"></script>
 </body>
 </html>
+
 
