--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,29 @@
     <title>Blog | My Sensational Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        /* Additional Custom Styles */
+        .search-container {
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+        .search-results {
+            margin-top: 20px;
+        }
+
+        .card {
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -35,28 +58,28 @@
 
 <header class="hero bg-primary text-white text-center py-5">
     <div class="container">
-        <h1>Blog</h1>
-        <p>Latest Posts and Updates</p>
+        <h1 class="display-4 animate__animated animate__fadeInDown">Blog</h1>
+        <p class="lead animate__animated animate__fadeInUp">Latest Posts and Updates</p>
     </div>
 </header>
 
 <main class="content py-5">
     <div class="container">
         <!-- Search Bar -->
-        <div class="mb-3">
+        <div class="search-container">
             <input type="text" id="search-input" class="form-control" placeholder="Search blog posts...">
             <button id="search-button" class="btn btn-primary mt-2">Search</button>
         </div>
 
         <!-- Search Results -->
-        <div id="search-results">
+        <div id="search-results" class="search-results">
             <!-- Search results will be displayed here dynamically -->
         </div>
 
         <!-- Blog Posts -->
-        <div class="row">
+        <div class="row" id="blog-posts">
             <article class="col-md-6 mb-4">
-                <div class="card">
+                <div class="card animate__animated animate__fadeInLeft">
                     <div class="card-body">
                         <h2 class="card-title">Second Blog Post</h2>
                         <p class="card-text">This is my second blog post. More content to come!</p>
@@ -64,7 +87,7 @@
                 </div>
             </article>
             <article class="col-md-6 mb-4">
-                <div class="card">
+                <div class="card animate__animated animate__fadeInRight">
                     <div class="card-body">
                         <h2 class="card-title">Another Interesting Post</h2>
                         <p class="card-text">This blog post is about something really interesting.</p>
@@ -80,7 +103,8 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.js"></script>
 <script>
     $(document).ready(function() {
         $('#search-button').click(function() {
@@ -111,7 +135,7 @@
                 searchResultsDiv.append('<p>No results found.</p>');
             } else {
                 posts.forEach(post => {
-                    searchResultsDiv.append('<div class="card mb-3">' +
+                    searchResultsDiv.append('<div class="card mb-3 animate__animated animate__fadeIn">' +
                         '<div class="card-body">' +
                         '<h5 class="card-title">' + post.title + '</h5>' +
                         '<p class="card-text">' + post.content + '</p>' +
@@ -123,5 +147,6 @@
 </script>
 </body>
 </html>
+
 
 
