--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | My Sensational Blog</title>
+    <title>Contact Me | My Sensational Blog</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        /* Additional Custom Styles */
+        .hero {
+            background: linear-gradient(135deg, #6b73ff, #000dff);
+            padding: 100px 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            color: #fff;
+        }
+
+        .hero p {
+            font-size: 1.5rem;
+            color: #fff;
+        }
+
+        .contact-form {
+            max-width: 600px;
+            margin: auto;
+        }
+
+        .form-control {
+            border-radius: 0;
+        }
+
+        .btn-primary {
+            border-radius: 0;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -34,38 +66,47 @@
     </div>
 </nav>
 
-<header class="hero bg-primary text-white text-center py-5">
+<header class="hero">
     <div class="container">
-        <h1>Contact Me</h1>
-        <p>I'd love to hear from you!</p>
+        <h1 class="display-3 animate__animated animate__fadeInDown">Contact Me</h1>
+        <p class="lead animate__animated animate__fadeInUp">I'd love to hear from you!</p>
     </div>
 </header>
 
-<main class="content py-5">
-    <div class="container">
-        <form action="/contact" method="post">
+<section class="py-5">
+    <div class="container contact-form">
+        <form id="contactForm">
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" required>
+                <input type="text" class="form-control" id="name" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+                <input type="email" class="form-control" id="email" required>
             </div>
             <div class="mb-3">
                 <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                <textarea class="form-control" id="message" rows="4" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn btn-primary">Send Message</button>
         </form>
     </div>
-</main>
+</section>
 
 <footer class="bg-dark text-white text-center py-4">
     <p>&copy; 2024 My Sensational Blog | Designed by euuuuuuan</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.js"></script>
+<script>
+    // Submit form handling (dummy example)
+    $('#contactForm').submit(function(e) {
+        e.preventDefault();
+        // You can add your own logic here, e.g., AJAX request to handle form submission
+        alert('Form submitted successfully!');
+    });
+</script>
 </body>
 </html>
