--- a/index.html
+++ b/index.html
@@ -6,7 +6,37 @@
     <title>My Sensational Blog | euuuuuuan</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <style>
+        /* Additional Custom Styles */
+        .hero {
+            background: linear-gradient(135deg, #6b73ff, #000dff);
+            padding: 100px 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            color: #fff;
+        }
+
+        .hero p {
+            font-size: 1.5rem;
+            color: #fff;
+        }
+
+        .card {
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -18,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -34,10 +64,10 @@
     </div>
 </nav>
 
-<header class="hero bg-primary text-white text-center py-5">
+<header class="hero">
     <div class="container">
-        <h1>Welcome to My Sensational Blog</h1>
-        <p>Sharing my thoughts and experiences</p>
+        <h1 class="display-3 animate__animated animate__fadeInDown">Welcome to My Sensational Blog</h1>
+        <p class="lead animate__animated animate__fadeInUp">Sharing my thoughts and experiences</p>
     </div>
 </header>
 
@@ -45,14 +75,21 @@
     <div class="container">
         <div class="row">
             <article class="col-md-6 mb-4">
-                <div class="card">
+                <div class="card animate__animated animate__fadeInLeft">
                     <div class="card-body">
                         <h2 class="card-title">First Blog Post</h2>
                         <p class="card-text">This is my first blog post!</p>
                     </div>
                 </div>
             </article>
-            <!-- More posts can be added here -->
+            <article class="col-md-6 mb-4">
+                <div class="card animate__animated animate__fadeInRight">
+                    <div class="card-body">
+                        <h2 class="card-title">Second Blog Post</h2>
+                        <p class="card-text">This is my second blog post. More content to come!</p>
+                    </div>
+                </div>
+            </article>
         </div>
     </div>
 </main>
@@ -62,7 +99,8 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.js"></script>
 </body>
 </html>
 
