--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,7 @@
     </style>
 </head>
 <body>
+<!-- 네비게이션 바 수정 -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="images/mylogo.png" alt="Logo" height="40"></a>
@@ -46,15 +47,22 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="blog.html">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search All Content" aria-label="Search" id="globalSearchInput">
+                        <button class="btn btn-outline-light" type="button" id="globalSearchButton">Search</button>
+                    </form>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
 
 <header class="hero bg-primary text-white text-center py-5">
     <div class="container">
@@ -145,6 +153,66 @@
         }
     });
 </script>
+<!-- JavaScript(jQuery) 추가 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    // 전체 페이지에서 검색할 내용
+    var pagesContent = [];
+
+    // 각 페이지의 내용을 가져와서 pagesContent 배열에 추가
+    function fetchPagesContent() {
+        $.get("index.html", function(data) {
+            pagesContent.push({ url: "index.html", content: $(data).text() });
+        });
+        $.get("about.html", function(data) {
+            pagesContent.push({ url: "about.html", content: $(data).text() });
+        });
+        $.get("blog.html", function(data) {
+            pagesContent.push({ url: "blog.html", content: $(data).text() });
+        });
+        $.get("contact.html", function(data) {
+            pagesContent.push({ url: "contact.html", content: $(data).text() });
+        });
+        // 다른 페이지도 필요에 따라 추가
+    }
+
+    // 초기에 페이지 내용을 가져옴
+    fetchPagesContent();
+
+    // 전역 검색 함수
+    function globalSearch(query) {
+        var results = [];
+        pagesContent.forEach(function(page) {
+            if (page.content.toLowerCase().includes(query.toLowerCase())) {
+                results.push(page.url);
+            }
+        });
+        return results;
+    }
+
+    // 전역 검색 버튼 클릭 시 동작
+    $('#globalSearchButton').click(function() {
+        var query = $('#globalSearchInput').val().trim();
+        var searchResults = globalSearch(query);
+        displayGlobalSearchResults(searchResults);
+    });
+
+    // 검색 결과를 표시하는 함수
+    function displayGlobalSearchResults(results) {
+        var searchResultsDiv = $('#globalSearchResults');
+        searchResultsDiv.empty(); // 기존 결과를 지우고
+
+        if (results.length > 0) {
+            results.forEach(function(url) {
+                var resultHtml = `<p><a href="${url}">${url}</a></p>`;
+                searchResultsDiv.append(resultHtml); // 결과를 추가
+            });
+        } else {
+            searchResultsDiv.append('<p>No results found.</p>'); // 결과가 없는 경우 메시지 표시
+        }
+    }
+</script>
+
 </body>
 </html>
 
